package com.jose.miumg.edu.gt.ingrediente;

public interface Ingrediente {
    public String getNombre();

    public int getCantidad();

}
