@startuml
class ingrediente.com.jose.miumg.edu.gt.Granos {
- String nombre
- String tipo
- int cantidad
+ void setNombre(String)
+ String getTipo()
+ void setTipo(String)
+ void setCantidad(int)
+ String getNombre()
+ int getCantidad()
}


class com.fernan.miumg.edu.gt.ingrediente.Espuma {
- String nombre
- int cantidad
+ void setNombre(String)
+ void setCantidad(int)
+ String getNombre()
+ int getCantidad()
}


class cafe.com.jose.miumg.edu.gt.CafeColombiano {
- String tipoGrano
+ String getTipoGrano()
+ void setTipoGrano(String)
+ void preparar()
+ void servir()
}


class sucursal.com.jose.miumg.edu.gt.Equipo {
- String tipo
- boolean estado
- String nombre
+ String getTipo()
+ void setTipo(String)
+ boolean getEstado()
+ void setEstado(Boolean)
+ void encender()
+ void reparar()
+ void apagar()
}


class ingrediente.com.jose.miumg.edu.gt.Agua {
- String nombre
- int cantidad
+ void setNombre(String)
+ void setCantidad(int)
+ String getNombre()
+ int getCantidad()
}


class sucursal.com.jose.miumg.edu.gt.Empleado {
- String nombre
- String puesto
- int salario
+ void trabajar()
+ void tomarOrden()
+ String getNombre()
+ void setNombre(String)
+ String getPuesto()
+ void setPuesto(String)
+ int getSalario()
+ void setSalario(int)
}


class sucursal.com.jose.miumg.edu.gt.Sucursal {
~ List<Empleado> empleados
~ List<Ingrediente> ingredientes
~ List<Equipo> equipos
~ List<String> especialidades
+ Empleado agregarEmpleado(Empleado)
- Ingrediente agregarIngrediente(Ingrediente)
+ Equipo agregarEquipo(Equipo)
+ String agregarEspecialidad(String)
}


interface ingrediente.com.jose.miumg.edu.gt.Ingrediente {
+ String getNombre()
+ int getCantidad()
}

class cafe.com.jose.miumg.edu.gt.CafeEspressoItaliano {
- int intensidad
+ void preparar()
+ void servir()
}


abstract class cafe.com.jose.miumg.edu.gt.Cafe {
- String nombre
- int tamano
- double precio
~ List<Ingrediente> ingredientes
+ String getNombre()
+ void setNombre(String)
+ int getTamano()
+ void setTamano(int)
+ double getPrecio()
+ void setPrecio(double)
+ {abstract}void preparar()
+ {abstract}void servir()
}


class ingrediente.com.jose.miumg.edu.gt.Leche {
- String nombre
- String tipo
- int cantidad
+ void setNombre(String)
+ String getTipo()
+ void setTipo(String)
+ void setCantidad(int)
+ String getNombre()
+ int getCantidad()
}




ingrediente.com.jose.miumg.edu.gt.Ingrediente <|.. ingrediente.com.jose.miumg.edu.gt.Granos
ingrediente.com.jose.miumg.edu.gt.Ingrediente <|.. com.fernan.miumg.edu.gt.ingrediente.Espuma
cafe.com.jose.miumg.edu.gt.Cafe <|-- cafe.com.jose.miumg.edu.gt.CafeColombiano
ingrediente.com.jose.miumg.edu.gt.Ingrediente <|.. ingrediente.com.jose.miumg.edu.gt.Agua
cafe.com.jose.miumg.edu.gt.Cafe <|-- cafe.com.jose.miumg.edu.gt.CafeEspressoItaliano
ingrediente.com.jose.miumg.edu.gt.Ingrediente <|.. ingrediente.com.jose.miumg.edu.gt.Leche
@enduml